# KipTool

./: .gitignore  CMakeLists.txt  README.md  cleanbuildfolders.bat  conanfile.py  release_history.md
applications/: KipToolBundle.pro
applications/kiptool/: CMakeLists.txt
applications/kiptool/UnitTests/tReslicer/: tReslicer.pro
applications/kiptool/qt/QtKipTool/: CMakeLists.txt  QtKipTool.pro
applications/kiptool/src/: Fits2Tif.cpp  ImageIO.cpp  ImagingToolConfig.cpp  ImagingToolConfig.h  Reslicer.cpp  fileconversiondialog.cpp  fileconversiondialog.h  genericconversion.cpp  kiptool_icon.rc  kiptoolmainwindow.cpp  kiptoolmainwindow.ui  loadimagedialog.cpp  loadimagedialog.h  loadimagedialog.ui  main.cpp  mergevolume.cpp  mergevolume.h  mergevolumesdialog.cpp  processdialog.cpp  processdialog.h  processdialog.ui  reslicerdialog.cpp  reslicerdialog.h
applications/kiptoolCLI/QtKipToolCLI/: QtKipToolCLI.pro  qtkiptoolcli.cpp
deploy/linux/: deploykiptool_ubuntu_withQT.sh
deploy/mac/: deploy_kiptool_mac.sh  deploy_kiptool_mac_arm64.sh
deploy/win/: deploykiptool_win.bat
frameworks/ImgProcModulesBundle/: ImgProcModulesBundle.pro
frameworks/ImgProcModulesGUIBundle/: ImgProcModulesGUIBundle.pro
frameworks/imageprocessing/ProcessFramework/: CMakeLists.txt
frameworks/imageprocessing/ProcessFramework/include/: KiplProcessConfig.h  ProcessFramework_global.h
frameworks/imageprocessing/ProcessFramework/qt/ProcessFramework/: ProcessFramework.pro
frameworks/imageprocessing/ProcessFramework/src/: KiplEngine.cpp  KiplProcessConfig.cpp
frameworks/imageprocessing/modules/AdvancedFilterModules/: CMakeLists.txt
frameworks/imageprocessing/modules/AdvancedFilterModules/qt/AdvancedFilterModules/: AdvancedFilterModules.pro
frameworks/imageprocessing/modules/AdvancedFilterModules/src/: AdvancedFilterModules_global.h  ISSfilterModule.cpp  ISSfilterModule.h  NonLinDiffusion.cpp  NonLinDiffusion.h  nonlocalmeansmodule.cpp
frameworks/imageprocessing/modules/AdvancedFilterModulesGUI/: CMakeLists.txt
frameworks/imageprocessing/modules/AdvancedFilterModulesGUI/qt/AdvancedFilterModulesGUI/: AdvancedFilterModulesGUI.pro
frameworks/imageprocessing/modules/AdvancedFilterModulesGUI/src/: issfilterdlg.cpp  issfilterdlg.h  issfilterdlg.ui
frameworks/imageprocessing/modules/BaseModules/: CMakeLists.txt
frameworks/imageprocessing/modules/BaseModules/qt/BaseModules/: BaseModules.pro
frameworks/imageprocessing/modules/BaseModules/src/: BaseModules_global.h  VolumeProject.cpp
frameworks/imageprocessing/modules/BaseModulesGUI/: CMakeLists.txt
frameworks/imageprocessing/modules/BaseModulesGUI/qt/BaseModulesGUI/: BaseModulesGUI.pro
frameworks/imageprocessing/modules/BaseModulesGUI/src/: dosecorrectiondlg.cpp  dosecorrectiondlg.h
frameworks/imageprocessing/modules/ClassificationModules/: CMakeLists.txt
frameworks/imageprocessing/modules/ClassificationModules/qt/ClassificationModules/: ClassificationModules.pro
frameworks/imageprocessing/modules/ClassificationModules/src/: ClassificationModules_global.h  DoubleThreshold.cpp  RemoveBackground.cpp
frameworks/imageprocessing/modules/ClassificationModulesGUI/: CMakeLists.txt
frameworks/imageprocessing/modules/ClassificationModulesGUI/qt/ClassificationModulesGUI/: ClassificationModulesGUI.pro
frameworks/imageprocessing/modules/ClassificationModulesGUI/src/: basicthresholddlg.cpp  classificationmodulesgui.cpp  doublethresholddlg.cpp
frameworks/imageprocessing/modules/ImagingModules/: CMakeLists.txt
frameworks/imageprocessing/modules/ImagingModules/qt/ImagingModules/: ImagingModules.pro
frameworks/imageprocessing/modules/ImagingModules/src/: ImagingModules_global.h  bblognorm.cpp  bblognorm.h  morphspotcleanmodule.cpp  morphspotcleanmodule.h  ringcleanmodule.cpp  stripefiltermodule.cpp
frameworks/imageprocessing/modules/ImagingModulesGui/: CMakeLists.txt
frameworks/imageprocessing/modules/ImagingModulesGui/qt/ImagingModulesGui/: ImagingModulesGui.pro
frameworks/imageprocessing/modules/ImagingModulesGui/src/: bblognormdlg.cpp  bblognormdlg.h  bblognormdlg.ui  morphspotcleandlg.cpp  morphspotcleandlg.h
frameworks/imageprocessing/modules/PCAModules/: CMakeLists.txt
frameworks/imageprocessing/modules/PCAModules/qt/PCAModules/: PCAModules.pro
frameworks/imageprocessing/modules/PCAModules/src/: PCAFilterModule.cpp  PCAModules_global.h
frameworks/imageprocessing/modules/PorespaceModules/: CMakeLists.txt
frameworks/imageprocessing/modules/PorespaceModules/qt/PorespaceModules/: PorespaceModules.pro
frameworks/imageprocessing/modules/PorespaceModules/src/: PorespaceModules_global.h
frameworks/imageprocessing/modules/StatisticsModules/: CMakeLists.txt
frameworks/imageprocessing/modules/StatisticsModules/qt/StatisticsModules/: StatisticsModules.pro
frameworks/imageprocessing/modules/StatisticsModules/src/: statisticsmodules_global.h
frameworks/imageprocessingBundle/: imageprocessingBundle.pro
profiles/: macos_arm_clang_15_release
python/: processScript.py
